branched email github

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -49,14 +49,14 @@ const t = messages[lang] ?? messages.fr;
         >{t.linkedin}</a
       >
       <a
-        href="https://github.com/alexis-fiska"
+        href="https://github.com/TaoXAdmin"
         target="_blank"
         rel="noopener noreferrer"
         class="hover:underline text-blue-600 dark:text-blue-400"
         >{t.github}</a
       >
       <a
-        href="mailto:contact@alexis-fiska.dev"
+        href="mailto:alexissfiska@gmail.com"
         class="hover:underline text-blue-600 dark:text-blue-400"
         >{t.email}</a
       >
