--- a/src/pages/en/about.astro
+++ b/src/pages/en/about.astro
@@ -51,7 +51,7 @@ const BASE = import.meta.env.BASE_URL ?? '/';
         </ul>
 
         <div class="flex items-center gap-6">
-          <div class="mt-4">
+          <div class="">
 			  <SocialIcons lang={lang} />
 			</div>
           <span class="text-neutral-500 dark:text-neutral-400 text-sm">•</span>
